--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 
 <body>
-    We are looking at GitHub Pages as our last task...
+    <h1>GitHub Pages</h1>
+    <p>
+        We are looking at GitHub Pages as our last task...
+    </p>
+    <img src="./github.png" />
 </body>
 
 </html>
